changes during interview

--- a/challenge1/animatedlogin.html
+++ b/challenge1/animatedlogin.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="magic.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
@@ -12,7 +13,7 @@
 
         <div class="container-info">
 
-            <div class="info-item log-in">
+            <div class="info-item log-in ">
                 <div class="table">
                     <div class="table-cell">
                         <h1>Hello There</h1>
@@ -36,7 +37,19 @@
         <div class="container-form">
 
             <form class="form-item login">
+
                 <table>
+
+                    <div class="info-item log-in">
+                        <div class="table">
+                            <div class="table-cell">
+                                <h1>Hello There</h1>
+                                <p>Don't have an account?<br>Sign up with us today!</p>
+                            </div>
+                        </div>
+                    </div>
+        
+
                     <div class="heading">
                         <h2>Sign in</h2>
                     </div>
@@ -61,6 +74,16 @@
 
             <form class="form-item register">
                 <table>
+
+                    <div class="info-item sign-up">
+                        <div class="table">
+                            <div class="table-cell">
+                                <h1>Lets get you started</h1>
+                                <p>Be part of our awesome<br>team and have fun with us</p>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="heading">
                         <h2>Create Account</h2>
                     </div>
