--- a/challenge 2/animatedlogin.html
+++ b/challenge 2/animatedlogin.html
@@ -58,6 +58,7 @@
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input name="email" placeholder="pigeon@nestcoop.com" type="email" class="form-control" required/>
+                            <img src="../bear.PNG" id='icon'>
                         </div>
 
                         <div class="form-group">
@@ -79,7 +80,7 @@
                         <div class="table">
                             <div class="table-cell">
                                 <h1>Lets get you started</h1>
-                                <p>Be part of our awesome<br>team and have fun with us</p>
+                                <p>Be part of our awesome team and have fun with us</p>
                             </div>
                         </div>
                     </div>
