sliding transition done, todo: overflow hidden for center

--- a/challenge 2/animatedlogin.html
+++ b/challenge 2/animatedlogin.html
@@ -37,7 +37,6 @@
         <div class="container-form">
 
             <form class="form-item login">
-
                 <table>
 
                     <div class="info-item log-in">
@@ -110,10 +109,11 @@
 
                     <div class="swap">Already have an account?</div>
                 </table>
-            </div>
+            </form>
 
-        </form>
+            <div class="form-item blank"></div>
 
+        </div>
 
     </div>
 </body>
