--- a/challenge 2/animatedlogin.html
+++ b/challenge 2/animatedlogin.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <div class="overlay" id="left-overlay"></div>
+    <div class="overlay" id="right-overlay"></div>
+
     <div class="container">
 
 
@@ -114,6 +117,7 @@
             <div class="form-item blank"></div>
 
         </div>
+
 
     </div>
 </body>
