--- a/challenge 2 - js, icon, mobile responsive/animatedlogin.html
+++ b/challenge 2 - js, icon, mobile responsive/animatedlogin.html
@@ -58,7 +58,7 @@
                         <div class="form-group">
                             <label for="email">Email</label>
                             <input name="email" placeholder="pigeon@nestcoop.com" type="email" class="form-control" required/>
-                            <img src="../bear.PNG" id='icon'>
+                            <img src="bear.PNG" id="icon">
                         </div>
 
                         <div class="form-group">
