--- a/challenge 3 - js, webpack, mobile responsive, simple test/index.html
+++ b/challenge 3 - js, webpack, mobile responsive, simple test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Challenge 3 (Constance)</title>
+    <title>Challenge 3</title>
     <script src="dist/main.js"></script>
     <link href="dist/main.css" rel="stylesheet">
 </head>
