--- a/challenge 2 - js, icon, mobile responsive/animatedlogin.html
+++ b/challenge 2 - js, icon, mobile responsive/animatedlogin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Challenge 2 (Constance)</title>
+    <title>Challenge 2</title>
     <link rel="stylesheet" href="style.css"></link>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="magic.js"></script>
